# btrfs-dwarfs-framework

./: Makefile
.github/workflows/: ci.yml
include/btrfs_dwarfs/: types.h
include/uapi/: bdfs_ioctl.h
kernel/: Makefile
kernel/btrfs_dwarfs/: bdfs_blend.c  bdfs_internal.h  bdfs_main.c
tests/integration/: run_all.sh
tests/unit/: CMakeLists.txt  test_compression.c  test_job_alloc.c  test_uuid.c
userspace/: CMakeLists.txt
userspace/cli/: bdfs.h  bdfs_main.c
userspace/daemon/: bdfs_daemon.c  bdfs_daemon.h  bdfs_exec.c  bdfs_jobs.c  bdfs_netlink.c  bdfs_policy.c  bdfs_socket.c
